# salvajson

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  DEVELOPMENT.md  README.md  RELEASE_CHECKLIST.md  build.py  build.sh  commitlint.config.js  dev.sh  install.sh  llms.txt  md.txt  publish.sh  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  publish.yml  release.yml  update-js.yml
docs/: _config.yml  index.md
js_src/: build.esbuild.js  package-lock.json  package.json  pnpm-lock.yaml  salvajson.src.js
salvajson/: __init__.py
scripts/: build.sh  release.sh  test.sh
src/salvajson/: __init__.py  __main__.py  _version.py  salvajson.js  salvajson.py
tests/: conftest.py  test_main.py  test_salvajson.py
tests/data/: test.json
